模型载入操作

--- a/QtRenderTool/QtRenderTool.ui
+++ b/QtRenderTool/QtRenderTool.ui
@@ -1,25 +1,22 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>QtRenderToolClass</class>
- <widget class="QWidget" name="QtRenderToolClass" >
-  <property name="objectName" >
-   <string notr="true">QtRenderToolClass</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="QtRenderToolClass">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>400</height>
+    <width>903</width>
+    <height>616</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>QtRenderTool</string>
-  </property>$centralwidget$
+  </property>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources>
-   <include location="QtRenderTool.qrc"/>
+  <include location="QtRenderTool.qrc"/>
  </resources>
  <connections/>
-</UI>
+</ui>
